# gst-template

gst-plugin/: README  autogen.sh  configure.ac
gst-plugin/src/: Makefile.am  gstwma.c  gstwma.h
gst-plugin/src/libwma/: ffmpeg_config.h  wmadec.h  wmadeci.c
